Add lightning drone enemy.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -41,22 +41,19 @@ Current tasks:
         - Will need to add special handling to remove extra ice tiles from frost beast+heat sink battles.
 
     Staff Tower
-        - Machines, traps + lightning
+        - All machine enemies have an offline state where they cannot be damaged, and possibly can be pushed around.
+            - Hitting offline machines with lightning will turn them on.
+            - Machines all default to offline except in the material world when the Storm Beast is active.
         - Conveyer belts/escalators.
+            - Conveyer belts should also effect movable object/enemies on the ground touching them.
             - Ice magic can freeze the conveyer belts which stops them but makes them slippery.
+            - Lightning magic will turn a conveyer belt on if it is off.
         - Lightning barriers
             - Deal 4 lightning damage and knock the player back.
                 - Player is still knocked back with spirit barrier or iframes.
                 - Invisibility allows the player to pass through unharmed.
             - Can be permanently on, toggled on/off on timer, or toggled by switches
             - Shows a 500ms warning when about to turn on, maybe sparks on either end of where the beam will be, or a smaller non damaging beam.
-        - All machine enemies have an offline state where they cannot be damaged, and possibly can be pushed around.
-            - Hitting offline machines with lightning will turn them on.
-            - Machines all default to offline except in the material world when the Storm Beast is active.
-        - Lightning drones
-            - Lightning shields up normally
-            - In range, fly quickly towards a player and stop nearby
-            - Drops shield and prepares a lightning AOE attack with 500ms warning with a ring showing the hit area.
         - Sentries
             - Large robots with high health and big attacks
             - Used as barriers when not powered.
@@ -65,6 +62,7 @@ Current tasks:
         - Ground level exit + sky level exit for each tower location.
         - Fast Conveyer belt puzzle with lightning barriers over it requiring you to either freeze the conveyer belts or run over them with clouds boots without getting knocked down by the lightning barriers.
         - Slow Conveyer belt puzzle with out of sync lightning barriers across it.
+        - Disabled conveyer belt with pots on it that needs to be turned on to move the pots out of the way.
 
     Storm Beast
         - Storm Heart is protected by a layer of bouncy clouds that the MC can slowly deform to reveal the heart. The clouds
