--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -23,6 +23,7 @@ Graphics:
 
 Current tasks:
     - Bug fixes
+        - Opening editor while jumping with a door on the screen while paused crashes the game.
         - Clone tool bugs
             - Mana regen is wrong when using clone tools (seems to multiply consumption/regen by number of clones)
             - Should destroy clones when the clone technique is unequipped.
