--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -28,14 +28,11 @@ Current tasks:
         - Spikes triggering switches in waterfall
         - Hero reappearing when falling from sky
         - Stuck at bottom of waterfall when facing up before big chest.
-        - Held chakram stays in world when teleporting to spirit world. Should despawn or move with you.
         - Lake temple stairs up looks closed instead of frozen.
         - Not sliding back with cloud boots on charge attack.
     - Put cracked ground in logic in forest temple with ice floor effect.
-    - Keep updating most recent object you interacted with as astral projection.
+    - Probably should move hero back to safe location on reviving.
     - Bug fixes
-        - Using spirit sight while charging should do nothing.
-        - Using roll while charging should abort the charge and do the roll action.
         - Floating in water bugs:
             - Chakram spawns at ground level
             - shouldn't be able to pass through doorways while z > 4.
