--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -24,6 +24,8 @@ Graphics:
 
 
 Current tasks:
+    - Make Beetle Boss retreat north before summoning minions
+
     - Probably should move hero back to safe location on reviving.
     - Bug fixes
         - Clone tool bugs
