--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -24,6 +24,7 @@ Graphics:
 
 
 Current tasks:
+    - Game occasionally plays small bits of music while muted.
     - Make Beetle Boss retreat north before summoning minions
 
     - Probably should move hero back to safe location on reviving.
