Fix a couple of bugs, make staff actually hit enemies, add to logic as weapon.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -23,6 +23,11 @@ Known Bugs:
         - For example snakes when moving left/right will be forced to move up if there is a wall to their south.
     - Some water instead of ice west of the lake in the spirit world.
     - Can get to undefined area in city.
+    - Cliff Edge issues:
+        - Staff can cover thin cliff edges
+        - Bow can fire up thin cliffs
+        - Bow cannot fire down southern cliffs.
+    - Projectiles can fire in betwen black abyss tiles.
 
 Graphics:
     Sweat animation when pulling on something you cannot move.
